# ReviewIATool

./: .env.example  README.md  docker-compose.yml  pyproject.toml
app/: config.py  dependencies.py  main.py
app/api/: review.py
app/middleware/: logging.py
app/repositories/: base.py  base_llm_client.py  factory.py  github.py  openai.py
app/schemas/: request.py
app/services/: github_service.py  review_service.py
app/utils/: http_client.py
app/validators/: base_validator.py
docker/: Dockerfile
tests/: test_middleware.py  test_repository_service.py  test_review_service.py
