[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["To Kirill <tio.kirill@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
pydantic = "^2.10.1"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
