[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["To Kirill <tio.kirill@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
pydantic = "^2.10.1"
pydantic-settings = "^2.6.1"
loguru = "^0.7.2"
uvicorn = "^0.32.1"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
